@@ -541,6 +541,30 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|testCollectionCreateSearchDelete
+argument_list|()
+expr_stmt|;
+comment|// sometimes run a second test e.g. to test collection create-delete-create scenario
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+name|testCollectionCreateSearchDelete
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testCollectionCreateSearchDelete
+specifier|private
+name|void
+name|testCollectionCreateSearchDelete
+parameter_list|()
+throws|throws
+name|Exception
+block|{
 name|File
 name|solrXml
 init|=
@@ -858,17 +882,17 @@ literal|45000
 argument_list|,
 literal|null
 argument_list|)
-init|)
-block|{
+init|;
 name|ZkStateReader
 name|zkStateReader
-init|=
+operator|=
 operator|new
 name|ZkStateReader
 argument_list|(
 name|zkClient
 argument_list|)
-decl_stmt|;
+init|)
+block|{
 name|AbstractDistribZkTestBase
 operator|.
 name|waitForRecoveriesToFinish
@@ -1213,6 +1237,65 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|// now restore the original state so that this function could be called multiple times
+comment|// re-create a server (to restore original NUM_SERVERS count)
+name|startedServer
+operator|=
+name|miniCluster
+operator|.
+name|startJettySolrRunner
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|startedServer
+operator|.
+name|isRunning
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|NUM_SERVERS
+argument_list|,
+name|miniCluster
+operator|.
+name|getJettySolrRunners
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// delete the collection we created earlier
+name|miniCluster
+operator|.
+name|deleteCollection
+argument_list|(
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|AbstractDistribZkTestBase
+operator|.
+name|waitForCollectionToDisappear
+argument_list|(
+name|collectionName
+argument_list|,
+name|zkStateReader
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|,
+literal|330
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 finally|finally
