@@ -1270,6 +1270,194 @@ name|collection
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|waitForCollectionToDisappear
+specifier|public
+specifier|static
+name|void
+name|waitForCollectionToDisappear
+parameter_list|(
+name|String
+name|collection
+parameter_list|,
+name|ZkStateReader
+name|zkStateReader
+parameter_list|,
+name|boolean
+name|verbose
+parameter_list|,
+name|boolean
+name|failOnTimeout
+parameter_list|,
+name|int
+name|timeoutSeconds
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Wait for collection to disappear - collection: "
+operator|+
+name|collection
+operator|+
+literal|" failOnTimeout:"
+operator|+
+name|failOnTimeout
+operator|+
+literal|" timeout (sec):"
+operator|+
+name|timeoutSeconds
+argument_list|)
+expr_stmt|;
+name|boolean
+name|cont
+init|=
+literal|true
+decl_stmt|;
+name|int
+name|cnt
+init|=
+literal|0
+decl_stmt|;
+while|while
+condition|(
+name|cont
+condition|)
+block|{
+if|if
+condition|(
+name|verbose
+condition|)
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"-"
+argument_list|)
+expr_stmt|;
+name|zkStateReader
+operator|.
+name|updateClusterState
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|ClusterState
+name|clusterState
+init|=
+name|zkStateReader
+operator|.
+name|getClusterState
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|clusterState
+operator|.
+name|hasCollection
+argument_list|(
+name|collection
+argument_list|)
+condition|)
+break|break;
+if|if
+condition|(
+name|cnt
+operator|==
+name|timeoutSeconds
+condition|)
+block|{
+if|if
+condition|(
+name|verbose
+condition|)
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"Gave up waiting for "
+operator|+
+name|collection
+operator|+
+literal|" to disappear.."
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|failOnTimeout
+condition|)
+block|{
+name|Diagnostics
+operator|.
+name|logThreadDumps
+argument_list|(
+literal|"Gave up waiting for "
+operator|+
+name|collection
+operator|+
+literal|" to disappear.  THREAD DUMP:"
+argument_list|)
+expr_stmt|;
+name|zkStateReader
+operator|.
+name|getZkClient
+argument_list|()
+operator|.
+name|printLayoutToStdOut
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"The collection ("
+operator|+
+name|collection
+operator|+
+literal|") is still present - waited for "
+operator|+
+name|timeoutSeconds
+operator|+
+literal|" seconds"
+argument_list|)
+expr_stmt|;
+comment|// won't get here
+return|return;
+block|}
+name|cont
+operator|=
+literal|false
+expr_stmt|;
+block|}
+else|else
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+block|}
+name|cnt
+operator|++
+expr_stmt|;
+block|}
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Collection has disappeared - collection: "
+operator|+
+name|collection
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|assertAllActive
 specifier|protected
 name|void
