@@ -1412,6 +1412,7 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+specifier|final
 name|ModifiableSolrParams
 name|params
 init|=
@@ -1519,6 +1520,89 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+return|return
+name|makeCollectionsRequest
+argument_list|(
+name|params
+argument_list|)
+return|;
+block|}
+DECL|method|deleteCollection
+specifier|public
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|deleteCollection
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+throws|throws
+name|SolrServerException
+throws|,
+name|IOException
+block|{
+specifier|final
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|ACTION
+argument_list|,
+name|CollectionAction
+operator|.
+name|DELETE
+operator|.
+name|name
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|NAME
+argument_list|,
+name|name
+argument_list|)
+expr_stmt|;
+return|return
+name|makeCollectionsRequest
+argument_list|(
+name|params
+argument_list|)
+return|;
+block|}
+DECL|method|makeCollectionsRequest
+specifier|private
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|makeCollectionsRequest
+parameter_list|(
+specifier|final
+name|ModifiableSolrParams
+name|params
+parameter_list|)
+throws|throws
+name|SolrServerException
+throws|,
+name|IOException
+block|{
+specifier|final
 name|QueryRequest
 name|request
 init|=
